--- a/src/app/components/users/user-profile/user-profile.component.scss
+++ b/src/app/components/users/user-profile/user-profile.component.scss
@@ -138,9 +138,10 @@ h1 {
     width: 65%;
   }
 
-  .full-width {
-    width: 50%;
-    border-color: #3884ff solid 2px;
+  select {
+    width: 65%;
+    padding: 0;
+    margin: 0;
   }
 
   .edit {
