--- a/src/app/components/users/user-edit-form/user-edit-form.component.scss
+++ b/src/app/components/users/user-edit-form/user-edit-form.component.scss
@@ -49,6 +49,10 @@ h1 {
   color: #3884ff;
 }
 
+h2{
+  text-align: center;
+}
+
 .manage {
   text-align: center;
   display: flex;
@@ -101,9 +105,9 @@ h1 {
     width: 65%;
   }
 
-  .full-width {
-    width: 50%;
-    border-color: #3884ff solid 2px;
+  select, option {
+    padding: 0;
+    margin: 0;
   }
 
   .edit {
