--- a/src/app/components/users/users-page/users-page.component.scss
+++ b/src/app/components/users/users-page/users-page.component.scss
@@ -3,6 +3,7 @@
   background: linear-gradient(to bottom right, #1f2329, 80%, rgb(94, 166, 233));
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 .users {
@@ -12,77 +13,6 @@
   justify-content: center;
 }
 
-.user {
-  .user-information {
-    background-color: #1f2329;
-    margin: 1rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
-    text-align: center;
-    border-radius: 15px;
-    border: solid blue 2px;
-    width: 25rem;
-    margin: 1rem;
-    height: 15rem;
-
-    .name {
-      padding: 5%;
-      padding-bottom: 0;
-      margin-bottom: 1%;
-      border-radius: 15px;
-      border-bottom-left-radius: 0;
-      border-bottom-right-radius: 0;
-      color: #3884ff;
-    }
-
-    p {
-      color: grey;
-      padding-top: 0;
-      margin-top: 0;
-      padding-left: 5%;
-      padding-right: 5%;
-      text-align: center;
-    }
-
-    .email {
-      color: #3884ff;
-    }
-
-    .btn {
-      margin-left: 7%;
-      margin-top: 8px;
-      padding: 0.5rem;
-      border: 2px solid #3884ff;
-      border-radius: 6px;
-      width: 6rem;
-      background-color: transparent;
-      color: #fff;
-      font-size: 12px;
-      font-weight: 700;
-      text-align: center;
-      letter-spacing: 0.9px;
-      text-decoration: none;
-      text-transform: capitalize;
-      cursor: pointer;
-    }
-
-    .block {
-      border-color: red;
-    }
-
-    .text-block {
-      color: red;
-    }
-  }
-}
-
-@media (max-width: 375px) {
-  .user {
-    .user-information {
-      width: 20rem;
-    }
-  }
-}
 .dialog-btn {
   position: fixed;
   bottom: 19px;
