fix mat-dialog window

--- a/src/app/components/users/add-user-form/add-user-form.component.html
+++ b/src/app/components/users/add-user-form/add-user-form.component.html
@@ -139,6 +139,7 @@
       type="submit"
       [disabled]="registerForm.invalid"
       (click)="createUser()"
+      [mat-dialog-close]="true" 
     >
       Add
     </button>
