fixed sort, fixed subcategories  and category

--- a/src/app/components/add-category/add-category.component.html
+++ b/src/app/components/add-category/add-category.component.html
@@ -37,41 +37,40 @@
               </mat-select>
             </mat-form-field>
         </span>
-
-        <button class="button" (click)="addSubCategory()"
-                [hidden]="!showCategoryBtn"
-                [disabled]="disabledSubCategBtn">+</button>
-
       </div>
-      <div class="sub-category-form" formArrayName="subCategories">
-        <div *ngFor="let control of subCategoriesFormArray.controls; let i = index">
-
+      <div class="sub-category-form" [class]="{hiden:isHiden}">
+        <div class="sub-category-display">
           <mat-form-field class="mat_field_category" appearance="fill">
             <mat-label>Sub-category</mat-label>
-            <input matInput [placeholder]="'sub-category ' + (i + 1)" [formControlName]="i">
-            <mat-error *ngIf="control.invalid && control.dirty || control.touched">
-              <mat-error *ngIf="control.errors?.pattern">Start with a capital letter</mat-error>
-              <mat-error class="error" *ngIf="control.errors?.required">Field is required</mat-error>
-              <mat-error class="error" *ngIf="control.errors?.minlength">Minimum length is 3 characters</mat-error>
-              <mat-error class="error" *ngIf="control.errors?.maxlength">Maximum length is 20 characters</mat-error>
+            <input matInput formControlName="subCategories">
+            <mat-error *ngIf="subCategories.invalid && subCategories.dirty || subCategories.touched">
+              <mat-error *ngIf="subCategories.errors?.pattern">Start with a capital letter</mat-error>
+              <mat-error class="error" *ngIf="subCategories.errors?.required">Field is required</mat-error>
+              <mat-error class="error" *ngIf="subCategories.errors?.minlength">Minimum length is 3 characters
+              </mat-error>
+              <mat-error class="error" *ngIf="subCategories.errors?.maxlength">Maximum length is 20 characters
+              </mat-error>
             </mat-error>
           </mat-form-field>
 
-          <button class="sub_button" mat-flat-button color="accent" type="submit"
-            [disabled]="form.invalid"
-            (click)="saveSubCategory(i)">Save</button>
-
-          <button class="sub_button" mat-flat-button style="color: red" type="submit"
-                  (click)="removeControl(i)">Remove</button>
-
+          <div>
+            <button class="main-btn" mat-flat-button color="accent" type="submit"
+                    [disabled]="!form.controls['subCategories'].valid"
+                    (click)="saveSubCategory()">Save sub-category
+            </button>
+          </div>
         </div>
       </div>
+      <button mat-flat-button type="submit" (click)="saveCategory()" [disabled]="!form.controls['category'].valid"
+              class="main-btn" [class]="{hiden:!isHiden}">Save category
+      </button>
+      <!--      [class]="{hiden:isHiden}"-->
+      <!--      [disabled]="!subCategories.valid || !disabledSubCategBtn"-->
 
-      <button mat-flat-button type="submit" (click)="saveCategory()" [disabled]="form.invalid"
-              class="main-btn" [class]="{hiden:!isHiden}">Save category</button>
 
       <button mat-flat-button type="button" [class]="{hiden:isHiden}" (click)="resetForm()"
-              class="main-btn">New category</button>
+              class="main-btn">New category
+      </button>
 
     </form>
   </div>
