--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,6 +1,6 @@
 <div class="main">
   <div class="section">
-    <div class="container w-container">
+    <div class="container">
       <h2 class="purple-header">Powered by InventorWiki</h2>
       <p class="paragraph-580px left-660px">Individuals and teams from all over the world are publishing amazing content
         on InventorWiki. Discover more about their stories.</p></div>
